Revert "Use a new model for Java APIs (#745)"
This reverts commit 5b67f21eb440f376c555ac2a451a44630c77c133.