@@ -65,12 +65,12 @@ public class DowntimesApiTest extends V1ApiTest {
     if (deleteDowntimes != null) {
       for (Long id : deleteDowntimes) {
         try {
-          api.getDowntime(id);
+          api.getDowntime(id).execute();
         } catch (ApiException e) {
           // doesn't exist => continue
           continue;
         }
-        api.cancelDowntime(id);
+        api.cancelDowntime(id).execute();
       }
     }
   }
@@ -94,12 +94,12 @@ public class DowntimesApiTest extends V1ApiTest {
             .recurrence(recurrence);
 
     // test creating downtime
-    Downtime obtained = api.createDowntime(downtime);
+    Downtime obtained = api.createDowntime().body(downtime).execute();
     Long downtimeId = obtained.getId();
     deleteDowntimes.add(downtimeId);
 
     // test getting downtime
-    obtained = api.getDowntime(downtimeId);
+    obtained = api.getDowntime(downtimeId).execute();
     assertEquals(testingDowntimeScope, obtained.getScope());
     assertEquals(testingDowntimeMessage, obtained.getMessage());
     assertEquals(testingDowntimeStart, obtained.getStart());
@@ -114,7 +114,7 @@ public class DowntimesApiTest extends V1ApiTest {
 
     // test updating downtime
     downtime.setMessage(testingDowntimeMessage + "-updated");
-    obtained = api.updateDowntime(downtimeId, downtime);
+    obtained = api.updateDowntime(downtimeId).body(downtime).execute();
 
     assertEquals(testingDowntimeScope, obtained.getScope());
     assertEquals(testingDowntimeMessage + "-updated", obtained.getMessage());
@@ -129,8 +129,8 @@ public class DowntimesApiTest extends V1ApiTest {
     assertTrue(obtained.getUpdaterId_JsonNullable().isPresent());
 
     // test canceling downtime
-    api.cancelDowntime(downtimeId);
-    obtained = api.getDowntime(downtimeId);
+    api.cancelDowntime(downtimeId).execute();
+    obtained = api.getDowntime(downtimeId).execute();
     assertNotNull(obtained.getCanceled());
   }
 
@@ -144,11 +144,10 @@ public class DowntimesApiTest extends V1ApiTest {
                 getUniqueEntityName("1"), getUniqueEntityName("2"), getUniqueEntityName("3")));
     for (String message : messages) {
       Downtime downtime = new Downtime().scope(testingDowntimeScope).message(message);
-      Downtime created = api.createDowntime(downtime);
+      Downtime created = api.createDowntime().body(downtime).execute();
       deleteDowntimes.add(created.getId());
     }
-    List<Downtime> allDowntimes =
-        api.listDowntimes(new DowntimesApi.ListDowntimesOptionalParameters().currentOnly(false));
+    List<Downtime> allDowntimes = api.listDowntimes().currentOnly(false).execute();
     for (String message : messages) {
       boolean found = false;
       for (Downtime downtime : allDowntimes) {
@@ -175,17 +174,17 @@ public class DowntimesApiTest extends V1ApiTest {
           new Downtime()
               .scope(message.equals(messages.get(2)) ? differentScope : testingDowntimeScope)
               .message(message);
-      Downtime created = api.createDowntime(downtime);
+      Downtime created = api.createDowntime().body(downtime).execute();
       deleteDowntimes.add(created.getId());
     }
 
     // cancel downtimes 1 and 2
-    api.cancelDowntimesByScope(
-        new CancelDowntimesByScopeRequest().scope(testingDowntimeScope.get(0)));
+    api.cancelDowntimesByScope()
+        .body(new CancelDowntimesByScopeRequest().scope(testingDowntimeScope.get(0)))
+        .execute();
 
     // verify that downtimes 1 and 2 are canceled
-    List<Downtime> allDowntimes =
-        api.listDowntimes(new DowntimesApi.ListDowntimesOptionalParameters().currentOnly(false));
+    List<Downtime> allDowntimes = api.listDowntimes().currentOnly(false).execute();
     for (String message : messages) {
       boolean found = false;
       for (Downtime downtime : allDowntimes) {
@@ -210,7 +209,7 @@ public class DowntimesApiTest extends V1ApiTest {
   @Test
   public void downtimeListErrorsTest() throws IOException {
     try {
-      fakeAuthApi.listDowntimes();
+      fakeAuthApi.listDowntimes().execute();
       fail("Expected ApiException not thrown");
     } catch (ApiException e) {
       assertEquals(403, e.getCode());
@@ -222,7 +221,7 @@ public class DowntimesApiTest extends V1ApiTest {
   @Test
   public void downtimeCreateErrorsTest() throws IOException {
     try {
-      api.createDowntime(new Downtime());
+      api.createDowntime().body(new Downtime()).execute();
       fail("Expected ApiException not thrown");
     } catch (ApiException e) {
       assertEquals(400, e.getCode());
@@ -231,7 +230,7 @@ public class DowntimesApiTest extends V1ApiTest {
     }
 
     try {
-      fakeAuthApi.createDowntime(new Downtime());
+      fakeAuthApi.createDowntime().body(new Downtime()).execute();
       fail("Expected ApiException not thrown");
     } catch (ApiException e) {
       assertEquals(403, e.getCode());
@@ -243,7 +242,7 @@ public class DowntimesApiTest extends V1ApiTest {
   @Test
   public void downtimeCancelByScopeErrorsTest() throws IOException {
     try {
-      api.cancelDowntimesByScope(new CancelDowntimesByScopeRequest());
+      api.cancelDowntimesByScope().body(new CancelDowntimesByScopeRequest()).execute();
       fail("Expected ApiException not thrown");
     } catch (ApiException e) {
       assertEquals(400, e.getCode());
@@ -252,7 +251,7 @@ public class DowntimesApiTest extends V1ApiTest {
     }
 
     try {
-      fakeAuthApi.cancelDowntimesByScope(new CancelDowntimesByScopeRequest());
+      fakeAuthApi.cancelDowntimesByScope().body(new CancelDowntimesByScopeRequest()).execute();
       fail("Expected ApiException not thrown");
     } catch (ApiException e) {
       assertEquals(403, e.getCode());
@@ -261,7 +260,9 @@ public class DowntimesApiTest extends V1ApiTest {
     }
 
     try {
-      api.cancelDowntimesByScope(new CancelDowntimesByScopeRequest().scope("nonexistent"));
+      api.cancelDowntimesByScope()
+          .body(new CancelDowntimesByScopeRequest().scope("nonexistent"))
+          .execute();
       fail("Expected ApiException not thrown");
     } catch (ApiException e) {
       assertEquals(404, e.getCode());
@@ -273,7 +274,7 @@ public class DowntimesApiTest extends V1ApiTest {
   @Test
   public void downtimeCancelErrorsTest() throws IOException {
     try {
-      fakeAuthApi.cancelDowntime(Long.valueOf(1234));
+      fakeAuthApi.cancelDowntime(new Long(1234)).execute();
       fail("Expected ApiException not thrown");
     } catch (ApiException e) {
       assertEquals(403, e.getCode());
@@ -282,7 +283,7 @@ public class DowntimesApiTest extends V1ApiTest {
     }
 
     try {
-      api.cancelDowntime(Long.valueOf(1234));
+      api.cancelDowntime(new Long(1234)).execute();
       fail("Expected ApiException not thrown");
     } catch (ApiException e) {
       assertEquals(404, e.getCode());
@@ -294,7 +295,7 @@ public class DowntimesApiTest extends V1ApiTest {
   @Test
   public void downtimeGetErrorsTest() throws IOException {
     try {
-      fakeAuthApi.getDowntime(Long.valueOf(1234));
+      fakeAuthApi.getDowntime(new Long(1234)).execute();
       fail("Expected ApiException not thrown");
     } catch (ApiException e) {
       assertEquals(403, e.getCode());
@@ -303,7 +304,7 @@ public class DowntimesApiTest extends V1ApiTest {
     }
 
     try {
-      api.getDowntime(Long.valueOf(1234));
+      api.getDowntime(new Long(1234)).execute();
       fail("Expected ApiException not thrown");
     } catch (ApiException e) {
       assertEquals(404, e.getCode());
@@ -315,7 +316,7 @@ public class DowntimesApiTest extends V1ApiTest {
   @Test
   public void downtimeUpdateErrorsTest() throws IOException {
     try {
-      api.updateDowntime(Long.valueOf(1234), new Downtime().start(Long.valueOf(1234)));
+      api.updateDowntime(new Long(1234)).body(new Downtime().start(new Long(1234))).execute();
       fail("Expected ApiException not thrown");
     } catch (ApiException e) {
       assertEquals(400, e.getCode());
@@ -324,7 +325,7 @@ public class DowntimesApiTest extends V1ApiTest {
     }
 
     try {
-      fakeAuthApi.updateDowntime(Long.valueOf(1234), new Downtime());
+      fakeAuthApi.updateDowntime(new Long(1234)).body(new Downtime()).execute();
       fail("Expected ApiException not thrown");
     } catch (ApiException e) {
       assertEquals(403, e.getCode());
@@ -333,7 +334,7 @@ public class DowntimesApiTest extends V1ApiTest {
     }
 
     try {
-      api.updateDowntime(Long.valueOf(1234), new Downtime());
+      api.updateDowntime(new Long(1234)).body(new Downtime()).execute();
       fail("Expected ApiException not thrown");
     } catch (ApiException e) {
       assertEquals(404, e.getCode());
