@@ -50,23 +50,20 @@ public class SnapshotsApiTest extends V1ApiTest {
 
     // Try to create a snapshot with a metric_query (and an optional event_query)
     GraphSnapshot response =
-        api.getGraphSnapshot(
-            start,
-            end,
-            new SnapshotsApi.GetGraphSnapshotOptionalParameters()
-                .metricQuery(metricQuery)
-                .title(title)
-                .eventQuery(eventQuery));
+        api.getGraphSnapshot()
+            .metricQuery(metricQuery)
+            .start(start)
+            .end(end)
+            .title(title)
+            .eventQuery(eventQuery)
+            .execute();
     assertEquals(metricQuery, response.getMetricQuery());
     assertEquals(graphDef, response.getGraphDef());
     assertNotEquals("", response.getSnapshotUrl());
 
     // Try to create a snapshot with a graph_def
     response =
-        api.getGraphSnapshot(
-            start,
-            end,
-            new SnapshotsApi.GetGraphSnapshotOptionalParameters().graphDef(graphDef).title(title));
+        api.getGraphSnapshot().graphDef(graphDef).start(start).end(end).title(title).execute();
     assertEquals(graphDef, response.getGraphDef());
     assertNotEquals("", response.getSnapshotUrl());
   }
@@ -77,10 +74,7 @@ public class SnapshotsApiTest extends V1ApiTest {
     String metricQuery = "query";
 
     try {
-      api.getGraphSnapshot(
-          null,
-          end,
-          new SnapshotsApi.GetGraphSnapshotOptionalParameters().metricQuery(metricQuery));
+      api.getGraphSnapshot().end(end).metricQuery(metricQuery).execute();
     } catch (ApiException e) {
       assertTrue(e.getMessage().contains("Missing the required parameter 'start"));
     }
@@ -92,10 +86,7 @@ public class SnapshotsApiTest extends V1ApiTest {
     String metricQuery = "query";
 
     try {
-      api.getGraphSnapshot(
-          start,
-          null,
-          new SnapshotsApi.GetGraphSnapshotOptionalParameters().metricQuery(metricQuery));
+      api.getGraphSnapshot().start(start).metricQuery(metricQuery).execute();
     } catch (ApiException e) {
       assertTrue(e.getMessage().contains("Missing the required parameter 'end"));
     }
@@ -104,7 +95,7 @@ public class SnapshotsApiTest extends V1ApiTest {
   @Test
   public void getGraphErrors() throws IOException {
     try {
-      api.getGraphSnapshot(Long.valueOf(345), Long.valueOf(123));
+      api.getGraphSnapshot().start(new Long(345)).end(new Long(123)).execute();
       fail("Expected ApiException not thrown");
     } catch (ApiException e) {
       assertEquals(400, e.getCode());
@@ -113,7 +104,7 @@ public class SnapshotsApiTest extends V1ApiTest {
     }
 
     try {
-      fakeAuthApi.getGraphSnapshot(Long.valueOf(345), Long.valueOf(123));
+      fakeAuthApi.getGraphSnapshot().start(new Long(345)).end(new Long(123)).execute();
       fail("Expected ApiException not thrown");
     } catch (ApiException e) {
       assertEquals(403, e.getCode());
